# EPAM-Dashboard

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yaml  ci.yaml
app/: main.py
tests/: test_main.py
